# S7_devices

./: Cargo.toml  README.md  Testing.md
src/: errors.rs  industrial_device.rs  s7_connexion.rs  s7_device.rs  types.rs  utils.rs
tests/: test.rs  test_registers.json
