[package]
name = "s7_device"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
de-regex = "0.1.0"
log = "0.4.22"
s7-client = "0.1.2"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
trait-variant = "0.1.2"

[lib]
path = "src/s7_device.rs"
