[package]
name = "s7_device"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
de-regex = "0.1.0"
log = "0.4.22"
s7-client = "0.1.2"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.1", features = ["test-util", "macros"] }
industrial_device = { git = "https://github.com/lkzjdnb/industrial_device.git", version = "0.1.3" }
custom_error = "1.9.2"
async-trait = "0.1.82"

[lib]
path = "src/s7_device.rs"

[dev-dependencies]
testcontainers = "0.21.1"
